fixed issues with Background one overlap on Call to Action

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ body, html {
 
 .sidebar {
   z-index: 1;
-  margin-top: 10%;
+  margin-top: 8%;
   padding: 0;
   width: 65px;
   background-color: transparent;
@@ -379,7 +379,7 @@ source https://www.freecodecamp.org/news/time-saving-css-techniques-to-create-re
 
 /* ------------------------------ Band Name Landing Page Animation */
 
-.band-name {
+.band-name-image {
     animation-name: fadeIn;
     animation-duration: 5s;
     animation-fill-mode: forwards;
@@ -514,10 +514,9 @@ source https://www.freecodecamp.org/news/time-saving-css-techniques-to-create-re
     .cta {
         width: 80%;
     }
-
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
 .bg-one, .bg-two, .bg-three, .bg-four, .bg-five {
     background-attachment: scroll;
   }
@@ -558,10 +557,13 @@ source https://www.freecodecamp.org/news/time-saving-css-techniques-to-create-re
     width: 95%
 }
 
+
+
 @media screen and (max-width: 460px) {
 
 .cta-wrapper {
     display: none;
 }
+
 }
 }
